Fixed links to media

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CampionoCose Beta</title>
+  <title>Campiono Cose Beta</title>
   <script src="src/detect.js"></script>
-  <script src="app.js" defer></script>
+  <script src="js/app.js" defer></script>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <!-- Error display-->
